--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
         <div class="main">
             <h2>Currency Converter</h2>
             <span></span>
-            <input type="text" placeholder="Input Money:" required id="value" autocomplete="off">
+            <input type="number" placeholder="Enter amount:" min="0" step="0.01" required id="value" autocomplete="off">
             <select id="source" title="Choose source currency" required>
                 <option value="" selected disabled>Choose The Source Currency</option>
                 <!-- options.html -->
             </select>
-            <input type="search" id="search-source" placeholder="Search Source:" autocomplete="off">
+            <input type="search" id="search-source" placeholder="Search Source (optional):" autocomplete="off">
             
             <select id="target" title="Choose the target currency" required>
                 <option value="" selected disabled>Choose The Target Currency</option>
                 <!-- options.html -->
             </select>
-            <input type="search" id="search-target" placeholder="Search target:" autocomplete="off">
+            <input type="search" id="search-target" placeholder="Search target  (optional):" autocomplete="off">
             <input type="text" id="result" placeholder="Result:" readonly>
             <div class="btns">
                 <button id="convert" title="Alt+Enter">Convert</button>
