Swap button text updated

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <input type="search" id="search-source" placeholder="Search Source (optional):" autocomplete="off">
             
             <div id="swap-container">
-                <button id="swap-btn" type="button" title="Swap Currencies">⇄</button>
+                <button id="swap-btn" type="button" title="Swap Currencies">&uArr;&dArr;</button>
             </div>
 
             <div class="currency-row">
