Updated some functions

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <input type="search" id="search-target" placeholder="Search target  (optional):" autocomplete="off">
             <input type="text" id="result" placeholder="Result:" readonly>
             <div class="btns">
-                <button id="convert" title="Alt+Enter">Convert</button>
+                <button id="convert">Convert</button>
                 <button id="reset">Reset</button>
                 <button id="convertByRealTime" title="Enter">Convert By Real Time</button>
             </div>
